<resources>
    <string name="app_name">Tresure_Hunter_Mobile</string>
    <string name="button">Button</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="invalid_username">Username must be 3–99 characters long</string>
    <string name="invalid_email">Enter Valid Email</string>
    <string name="invalid_register_password">Password must be 8–99 characters long</string>
    <string name="invalid_confirm_password">Passwords do not match</string>
    <string name="todo">TODO</string>
    <string name="login_as_guest">Login as Guest</string>
    <string name="username_or_email">Username or Email</string>
    <string name="play">Play</string>
    <string name="click_here_for_register">Click here for register</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="invalid_name_or_email">Please Enter Valid Username or Email</string>
    <string name="invalid_login_password">Please Enter Valid Password</string>
    <string name="settings">Settings</string>
    <string name="puzzles">puzzles</string>
    <string name="bt_continue">continue</string>
    <string name="answer">Answer</string>
    <string name="title_activity_maps">Map</string>
    <string name="bt_map" />
    <string name="map">MAP</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="tv_points">tv_points</string>
    <string name="tv_username">tv_username</string>
    <string name="puzzleLeaderBoard">LEADERBOARD</string>
    <string name="location_permission_denied" />
    <string name="permission_required_toast" />
    <string name="permission_rationale_location" />
    <string name="music">Music</string>
    <string name="sounds">Sounds</string>
    <string name="you_won">!!!!!! You Won !!!!!!</string>
    <string name="check_results">Check Results</string>
    <string name="you_lost">You Lost</string>
    <string name="edit_profile">edit profile</string>
    <string name="delete_profile">delete profile</string>
    <string name="start">start</string>
    <string name="edit_email">edit email</string>
    <string name="edit_password">edit password</string>
    <string name="go_back">go back</string>
    <string name="current_email">Current Email</string>
    <string name="new_email">New Email</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="delete">delete</string>
    <string name="offline_players">OFFLINE PLAYERS</string>
    <string name="online_players">ONLINE PLAYERS</string>
</resources>